set width of treemap breadcrumb container to 100% to avoid longer breadcrumbs being cutoff

--- a/src/client/stylesheets/modules/home/home.module.scss
+++ b/src/client/stylesheets/modules/home/home.module.scss
@@ -254,3 +254,7 @@
 .setHeight {
   height: 725px;
 }
+
+#sequenceTreeMap {
+  width: 100%;
+}
